// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getIconSize Should return correct icon size 1`] = `
{
  "iconSize": {
    "general": {
      "height": "71%",
      "width": "71%",
    },
    "l": {
      "height": "71%",
      "width": "71%",
    },
    "label": "Icon size",
    "m": {
      "height": "71%",
      "width": "71%",
    },
    "s": {
      "height": "71%",
      "width": "71%",
    },
    "xl": {
      "height": "71%",
      "width": "71%",
    },
    "xs": {
      "height": "71%",
      "width": "71%",
    },
    "xxl": {
      "height": "71%",
      "width": "71%",
    },
  },
}
`;

exports[`getIconSize Should return correct icon size 2`] = `
{
  "iconSize": {
    "general": {
      "height": "123%",
      "width": "123%",
    },
    "l": {
      "height": "123%",
      "width": "123%",
    },
    "label": "Icon size",
    "m": {
      "height": "123%",
      "width": "123%",
    },
    "s": {
      "height": "123%",
      "width": "123%",
    },
    "xl": {
      "height": "123%",
      "width": "123%",
    },
    "xs": {
      "height": "123%",
      "width": "123%",
    },
    "xxl": {
      "height": "123%",
      "width": "123%",
    },
  },
}
`;

exports[`getIconSize Should return right hover styles with only unit specified on hover 1`] = `
{
  "iconSize": {
    "general": {
      "height": "32em",
      "width": "32em",
    },
    "l": {
      "height": "32em",
      "width": "32em",
    },
    "label": "Icon size",
    "m": {
      "height": "32em",
      "width": "32em",
    },
    "s": {
      "height": "32em",
      "width": "32em",
    },
    "xl": {
      "height": "32em",
      "width": "32em",
    },
    "xs": {
      "height": "32em",
      "width": "32em",
    },
    "xxl": {
      "height": "32em",
      "width": "32em",
    },
  },
}
`;

exports[`getIconSize Should return right hover styles with only value specified on hover (no unit) 1`] = `
{
  "iconSize": {
    "general": {
      "height": "64%",
      "width": "64%",
    },
    "l": {
      "height": "64%",
      "width": "64%",
    },
    "label": "Icon size",
    "m": {
      "height": "64%",
      "width": "64%",
    },
    "s": {
      "height": "64%",
      "width": "64%",
    },
    "xl": {
      "height": "64%",
      "width": "64%",
    },
    "xs": {
      "height": "64%",
      "width": "64%",
    },
    "xxl": {
      "height": "64%",
      "width": "64%",
    },
  },
}
`;

exports[`getIconSize Should return right styles with height fit-content, width/height ratio < 1 1`] = `
{
  "iconSize": {
    "general": {
      "height": "72%",
      "width": "36%",
    },
    "l": {
      "height": "32%",
      "width": "32%",
    },
    "label": "Icon size",
    "m": {
      "height": "68%",
      "width": "36%",
    },
    "s": {
      "height": "68%",
      "width": "36%",
    },
    "xl": {
      "height": "72%",
      "width": "36%",
    },
    "xs": {
      "height": "68%",
      "width": "36%",
    },
    "xxl": {
      "height": "72%",
      "width": "36%",
    },
  },
}
`;

exports[`getIconSize Should return right styles with height fit-content, width/height ratio > 1 1`] = `
{
  "iconSize": {
    "general": {
      "height": "12%",
      "width": "36%",
    },
    "l": {
      "height": "32%",
      "width": "32%",
    },
    "label": "Icon size",
    "m": {
      "height": "16%",
      "width": "36%",
    },
    "s": {
      "height": "16%",
      "width": "36%",
    },
    "xl": {
      "height": "12%",
      "width": "36%",
    },
    "xs": {
      "height": "16%",
      "width": "36%",
    },
    "xxl": {
      "height": "12%",
      "width": "36%",
    },
  },
}
`;

exports[`getIconSize Should return right styles with only unit specified on responsive 1`] = `
{
  "iconSize": {
    "general": {
      "height": "32%",
      "width": "32%",
    },
    "l": {
      "height": "32em",
      "width": "32em",
    },
    "label": "Icon size",
    "m": {
      "height": "32em",
      "width": "32em",
    },
    "s": {
      "height": "32em",
      "width": "32em",
    },
    "xl": {
      "height": "32%",
      "width": "32%",
    },
    "xs": {
      "height": "32em",
      "width": "32em",
    },
    "xxl": {
      "height": "32%",
      "width": "32%",
    },
  },
}
`;

exports[`getIconSize Should use height when width is not specified 1`] = `
{
  "iconSize": {
    "general": {
      "height": "32px",
      "width": "32px",
    },
    "l": {
      "height": "32px",
      "width": "32px",
    },
    "label": "Icon size",
    "m": {
      "height": "32px",
      "width": "32px",
    },
    "s": {
      "height": "32px",
      "width": "32px",
    },
    "xl": {
      "height": "32px",
      "width": "32px",
    },
    "xs": {
      "height": "32px",
      "width": "32px",
    },
    "xxl": {
      "height": "32px",
      "width": "32px",
    },
  },
}
`;

exports[`getIconSize Should use height when width is not specified 2`] = `
{
  "iconSize": {
    "general": {
      "height": "50%",
      "width": "50%",
    },
    "l": {
      "height": "50%",
      "width": "50%",
    },
    "label": "Icon size",
    "m": {
      "height": "50%",
      "width": "50%",
    },
    "s": {
      "height": "50%",
      "width": "50%",
    },
    "xl": {
      "height": "50%",
      "width": "50%",
    },
    "xs": {
      "height": "50%",
      "width": "50%",
    },
    "xxl": {
      "height": "50%",
      "width": "50%",
    },
  },
}
`;

exports[`getIconSize Should work on responsive 1`] = `
{
  "iconSize": {
    "general": {
      "height": "32px",
      "width": "32px",
    },
    "l": {
      "height": "32px",
      "width": "32px",
    },
    "label": "Icon size",
    "m": {
      "height": "12em",
      "width": "12em",
    },
    "s": {
      "height": "12em",
      "width": "12em",
    },
    "xl": {
      "height": "32px",
      "width": "32px",
    },
    "xs": {
      "height": "12em",
      "width": "12em",
    },
    "xxl": {
      "height": "32px",
      "width": "32px",
    },
  },
}
`;

exports[`getIconSize Should work on responsive 2`] = `
{
  "iconSize": {
    "general": {
      "height": "50%",
      "width": "50%",
    },
    "l": {
      "height": "50%",
      "width": "50%",
    },
    "label": "Icon size",
    "m": {
      "height": "15px",
      "width": "15px",
    },
    "s": {
      "height": "15px",
      "width": "15px",
    },
    "xl": {
      "height": "50%",
      "width": "50%",
    },
    "xs": {
      "height": "15px",
      "width": "15px",
    },
    "xxl": {
      "height": "50%",
      "width": "50%",
    },
  },
}
`;

exports[`getIconSize Should work with prefixes 1`] = `
{
  "iconSize": {
    "general": {
      "height": "32px",
      "width": "32px",
    },
    "l": {
      "height": "32px",
      "width": "32px",
    },
    "label": "Icon size",
    "m": {
      "height": "32px",
      "width": "32px",
    },
    "s": {
      "height": "32px",
      "width": "32px",
    },
    "xl": {
      "height": "32px",
      "width": "32px",
    },
    "xs": {
      "height": "32px",
      "width": "32px",
    },
    "xxl": {
      "height": "32px",
      "width": "32px",
    },
  },
}
`;

exports[`getIconSize Should work with prefixes 2`] = `
{
  "iconSize": {
    "general": {
      "height": "50%",
      "width": "50%",
    },
    "l": {
      "height": "50%",
      "width": "50%",
    },
    "label": "Icon size",
    "m": {
      "height": "50%",
      "width": "50%",
    },
    "s": {
      "height": "50%",
      "width": "50%",
    },
    "xl": {
      "height": "50%",
      "width": "50%",
    },
    "xs": {
      "height": "50%",
      "width": "50%",
    },
    "xxl": {
      "height": "50%",
      "width": "50%",
    },
  },
}
`;
